# Flagship4ML

./: .gitignore  .pre-commit-config.yaml  README.md  mapping.json  pyproject.toml
Flagship4ML/: create_sims.py
Flagship4ML/f4ml/: constants.py  sims_generator.py
Flagship4ML/utils/: explore_sims.py
config/: config.yaml
data/: 16511_PAU_subsample_100.parquet  mapping.json
notebooks/: DA_sims.py  create_galaxies.py
tests/: test_create_galaxies.py
